--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,8 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
 
     //dagger
-    implementation 'com.google.dagger:dagger:2.20'
+    implementation "com.google.dagger:dagger-android:2.20"
+    implementation 'com.google.dagger:dagger-android-support:2.20'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.20'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.20'
 }
