--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,16 +8,16 @@
         android:name=".zalo.ZaloApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/label_app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".zalo.views.lobby.fragments.chat_fragment.chat_activity.ChatActivity"
-            android:parentActivityName=".zalo.views.lobby.LobbyActivity"
+        <activity android:name=".zalo.views.home.fragments.chat_fragment.chat_activity.ChatActivity"
+            android:parentActivityName=".zalo.views.home.HomeActivity"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
-            android:name=".zalo.views.lobby.LobbyActivity"
-            android:label="@string/title_activity_lobby_ativity2"
+            android:name=".zalo.views.home.HomeActivity"
+            android:label="@string/label_home_screen"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".zalo.views.login.LoginActivity"
