--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,11 +28,13 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0-alpha03'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha03'
+    androidTestImplementation 'androidx.test:runner:1.2.0-alpha04'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha04'
 
-    //password edittext
+    //material design
     implementation "com.google.android.material:material:1.1.0-alpha05"
+
+    //view pager
     implementation 'androidx.viewpager:viewpager:1.0.0'
 
     //picasso
