--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/label_app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.MaterialComponents.Light">
         <activity
             android:name=".zalo.views.splash.SplashActivity"
             android:theme="@style/AppTheme.SplashTheme">
@@ -22,7 +22,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".zalo.views.home.fragments.chat_fragment.chat_activity.RoomActivity"
+            android:name=".zalo.views.home.fragments.chat_fragment.room_activity.RoomActivity"
             android:parentActivityName=".zalo.views.home.HomeActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
