--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/label_app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MaterialComponents.Light">
+        android:theme="@style/AppTheme.Zalo">
         <activity
             android:name=".zalo.views.splash.SplashActivity"
             android:theme="@style/AppTheme.SplashTheme">
