add last message time for each roomItem, fix unseenMsgNum bug, update chat ui

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity
             android:name=".zalo.views.login.LoginActivity"
             android:parentActivityName=".zalo.views.intro.IntroActivity" />
-        <activity android:name=".zalo.views.intro.IntroActivity" />
+        <activity android:name=".zalo.views.intro.IntroActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 </manifest>
