--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,17 +6,22 @@
 
     <application
         android:name=".zalo.ZaloApplication"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/label_app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.Zalo">
+        <activity android:name=".zalo.views.home.fragments.group_fragment.create_group_activity.CreateGroupActivity"
+            android:theme="@style/AppTheme.White"
+            android:label="@string/description_create_group"
+            />
         <activity
             android:name=".zalo.views.splash.SplashActivity"
             android:theme="@style/AppTheme.SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
@@ -32,7 +37,9 @@
         <activity
             android:name=".zalo.views.login.LoginActivity"
             android:parentActivityName=".zalo.views.intro.IntroActivity" />
-        <activity android:name=".zalo.views.intro.IntroActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".zalo.views.intro.IntroActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
+
 </manifest>
