--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,14 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
+
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+
     <application
         android:name=".zalo.ZaloApplication"
         android:allowBackup="false"
@@ -12,10 +20,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.Zalo">
-        <activity android:name=".zalo.views.home.fragments.group_fragment.create_group_activity.CreateGroupActivity"
-            android:theme="@style/AppTheme.White"
+        <activity android:name=".zalo.views.register.RegisterActivity"></activity>
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="vng.zalo.tdtai.zalo.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
+        <activity
+            android:name=".zalo.views.home.fragments.group_fragment.create_group_activity.CreateGroupActivity"
             android:label="@string/description_create_group"
-            />
+            android:theme="@style/AppTheme.White" />
         <activity
             android:name=".zalo.views.splash.SplashActivity"
             android:theme="@style/AppTheme.SplashTheme">
@@ -28,7 +48,6 @@
         </activity>
         <activity
             android:name=".zalo.views.home.fragments.chat_fragment.room_activity.RoomActivity"
-            android:parentActivityName=".zalo.views.home.HomeActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".zalo.views.home.HomeActivity"
