--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha02"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.40"
+
+    //lottie
+    implementation "com.airbnb.android:lottie:3.0.7"
 }
 repositories {
     mavenCentral()
