--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,38 +50,25 @@ dependencies {
     //recyclerView
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
-    //cardview
-    implementation 'androidx.cardview:cardview:1.0.0'
-
-    //roomdb
-    implementation "androidx.room:room-runtime:2.1.0"
-    annotationProcessor "androidx.room:room-compiler:2.1.0"
-    // For Kotlin use kapt instead of annotationProcessor
-
     //firebase
     implementation 'com.google.firebase:firebase-database:18.0.1'
     implementation 'com.google.firebase:firebase-core:17.0.1'
     implementation 'com.google.firebase:firebase-firestore:20.2.0'
     implementation 'com.google.firebase:firebase-storage:18.1.1'
 
-    //viewmodel
+    //viewModel
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-alpha02"
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0-alpha02"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha02"
 
-    //multidex
+    //multiDex
     implementation 'com.android.support:multidex:1.0.3'
-
-    //dagger
-    implementation "com.google.dagger:dagger-android:2.20"
-    implementation 'com.google.dagger:dagger-android-support:2.20'
-    annotationProcessor 'com.google.dagger:dagger-android-processor:2.20'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.20'
-    kapt 'com.google.dagger:dagger-compiler:2.20'
 
     //circular imageView
     implementation 'de.hdodenhof:circleimageview:3.0.0'
+
+    // kotlin
     implementation "androidx.core:core-ktx:1.0.2"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha02"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.41"
 
