--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,13 +51,16 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
     //firebase
-    implementation 'com.google.firebase:firebase-database:19.0.0'
+    implementation 'com.google.firebase:firebase-database:19.1.0'
     implementation 'com.google.firebase:firebase-core:17.2.0'
-    implementation 'com.google.firebase:firebase-firestore:21.0.0'
-    implementation 'com.google.firebase:firebase-storage:19.0.0'
+    implementation 'com.google.firebase:firebase-firestore:21.1.0'
+    implementation 'com.google.firebase:firebase-storage:19.0.1'
 
-    //viewModel
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-alpha03"
+    //lifecycle(livedata, process lifecycle, ...)
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-beta01"
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.1.0"
+
+    //view model
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0-alpha03"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha03"
 
@@ -74,6 +77,10 @@ dependencies {
 
     //lottie
     implementation "com.airbnb.android:lottie:3.0.7"
+
+    //rx java2
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
 }
 repositories {
     mavenCentral()
