--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,20 @@
         android:maxSdkVersion="18" />
 
     <application
-        android:windowSoftInputMode="adjustResize"
         android:name=".ZaloApplication"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/label_app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.Light">
+        android:theme="@style/AppTheme.Light"
+        android:windowSoftInputMode="adjustResize">
+        <service
+            android:stopWithTask="false"
+            android:name=".services.NotificationService"
+            android:enabled="true"
+            android:exported="true" />
+
         <activity android:name=".views.activities.RegisterActivity" />
 
         <provider
@@ -55,9 +61,9 @@
             android:label="@string/label_home_screen"
             android:theme="@style/AppTheme.NoActionBarLight" />
         <activity
-            android:theme="@style/AppTheme.Light"
             android:name=".views.activities.LoginActivity"
-            android:parentActivityName=".views.activities.IntroActivity" />
+            android:parentActivityName=".views.activities.IntroActivity"
+            android:theme="@style/AppTheme.Light" />
         <activity
             android:name=".views.activities.IntroActivity"
             android:theme="@style/AppTheme.NoActionBarLight" />
