--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,7 +73,7 @@ dependencies {
     // kotlin
     implementation "androidx.core:core-ktx:1.1.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.50"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
     //lottie
     implementation "com.airbnb.android:lottie:3.0.7"
@@ -87,6 +87,12 @@ dependencies {
 
     //round corners imageview
     implementation 'com.makeramen:roundedimageview:2.3.0'
+
+    //play video
+    implementation 'com.google.android.exoplayer:exoplayer:2.11.1'
+
+    //copy fields
+    implementation 'commons-beanutils:commons-beanutils:1.9.4'
 }
 repositories {
     mavenCentral()
