--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.Light"
         android:windowSoftInputMode="adjustResize">
-        <activity android:name=".ui.profile.ProfileActivity"></activity>
+        <service
+            android:name=".services.MessagingService"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+        <activity android:name=".ui.profile.ProfileActivity" />
         <activity
             android:name=".ui.share.ShareActivity"
             android:launchMode="singleTop"
@@ -44,7 +53,7 @@
         <receiver
             android:name=".receivers.BootReceiver"
             android:enabled="true"
-            android:exported="true">
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.QUICKBOOT_POWERON" />
@@ -53,11 +62,8 @@
 
         <activity
             android:name=".ui.call.CallActivity"
-            android:theme="@style/AppTheme.Light.NoActionBar" /> <!-- <service -->
-        <!-- android:name=".services.NotificationService" -->
-        <!-- android:enabled="true" -->
-        <!-- android:exported="true" -->
-        <!-- android:stopWithTask="false" /> -->
+            android:theme="@style/AppTheme.Light.NoActionBar" />
+
         <activity android:name=".ui.register.RegisterActivity" />
 
         <provider
