--- a/build.gradle
+++ b/build.gradle
@@ -1,34 +1,49 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-buildscript {
-    ext.kotlin_version = '1.4.10'
-    repositories {
-        google()
-        jcenter()
-        maven { url "https://jitpack.io" }
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.2'
-        classpath 'com.google.gms:google-services:4.3.4'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+//buildscript {
+//    ext.kotlin_version = '1.5.30'
+//    repositories {
+//        google()
+//        jcenter()
+//        maven { url "https://jitpack.io" }
+//    }
+//    dependencies {
+//        classpath 'com.android.tools.build:gradle:4.0.2'
+//        classpath 'com.google.gms:google-services:4.3.4'
+//        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+//
+//        // NOTE: Do not place your application dependencies here; they belong
+//        // in the individual module build.gradle files
+//    }
+//}
+//
+//allprojects {
+//    repositories {
+//        google()
+//        jcenter()
+//        maven { url "https://jitpack.io" }
+//    }
+//}
+//
+//task clean(type: Delete) {
+//    delete rootProject.buildDir
+//}
+//
+//ext{
+//    daggerVersion = '2.27'
+//}
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
-}
-
-allprojects {
-    repositories {
-        google()
-        jcenter()
-        maven { url "https://jitpack.io" }
-    }
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+plugins {
+    id 'com.android.application' version '7.2.2' apply false
+    id 'com.android.library' version '7.2.2' apply false
+    id 'org.jetbrains.kotlin.android' version '1.5.30' apply false
+    id 'com.google.gms.google-services' version '4.3.13' apply false
+    id 'com.google.firebase.crashlytics' version '2.9.1' apply false
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-ext{
-    daggerVersion = '2.27'
-}
+apply from: rootProject.file('gradle/configure.gradle')
